# resume-realtime

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  rust-toolchain.toml  tailwind.config.js
.claude/agents/: leptos-component-expert.md  resume-parser-expert.md  wasm-rust-integration.md
.github/workflows/: ci.yml  release.yml
000-docs/: 001-DR-STND-document-filing-system-standard-v4.md  002-DR-TMPL-aar-template.md  003-AA-AACR-phase-0-scaffold-and-standards.md  004-AA-AACR-phase-1-rust-mvp-ssr-hydration.md  005-PP-BPRT-realtime-collab-engine.md  006-RL-RSRC-resume-realtime-blueprint.md  006-RL-RSRC-sovereign-recruiter-node-blueprint.md  007-PP-PROD-resume-realtime-prd.md  008-PM-TASK-resume-realtime-tasks.md  009-AT-ADEC-resume-realtime-architecture-decisions.md  010-PM-RISK-resume-realtime-risk-register.md  011-UC-USRS-resume-realtime-user-stories.md  012-TQ-TEST-resume-realtime-test-plan.md  013-OD-RLSE-resume-realtime-release-plan.md  014-PP-PROD-resume-realtime-mvp-prd.md  015-AT-ADEC-resume-realtime-mvp-adr.md  016-PM-TASK-resume-realtime-mvp-tasks.md
src/: lib.rs  main.rs
styles/: app.css
templates/: index.html
