[package]
name = "real-time-resume"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6.12" }
leptos_axum = { version = "0.6.12", optional = true }
leptos_meta = { version = "0.6.12" }
leptos_router = { version = "0.6.12" }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
http = { version = "1.0", optional = true }
thiserror = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:http",
    "dep:leptos_axum",
    "dep:tracing",
    "dep:tracing-subscriber",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.leptos]
output-name = "real-time-resume"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "styles/app.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
